Changed images for the sample recipe

--- a/src/main/webapp/sass/inc/business-casual.scss
+++ b/src/main/webapp/sass/inc/business-casual.scss
@@ -6,11 +6,11 @@
 
 body {
     font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
-    background: url('../img/bg.jpg') no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
+    background: url('http://orig01.deviantart.net/f5b7/f/2013/008/9/6/free_vector_of_the_day__241__background_texture_by_cristina012-d5qts3i.jpg') center center fixed;
+    //-webkit-background-size: cover;
+    //-moz-background-size: cover;
+    //background-size: cover;
+    //-o-background-size: cover;
 }
 
 h1,
