--- a/src/main/webapp/partials/random_recipe.html
+++ b/src/main/webapp/partials/random_recipe.html
@@ -4,32 +4,28 @@
 		<div class="row">
 				<div class="box">
 						<div class="col-lg-12 text-center">
-								<div id="carousel-example-generic" class="carousel slide">
+								<div id="carousel-recipe-header" class="carousel slide">
 										<!-- Indicators -->
 										<ol class="carousel-indicators hidden-xs">
-												<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-												<li data-target="#carousel-example-generic" data-slide-to="1"></li>
-												<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+												<li data-target="#carousel-recipe-header" data-slide-to="0" class="active"></li>
+												<li data-target="#carousel-recipe-header" data-slide-to="1"></li>
 										</ol>
 
 										<!-- Wrapper for slides -->
 										<div class="carousel-inner">
 												<div class="item active">
-														<img class="img-responsive img-full" src="img/slide-1.jpg" alt="" />
+														<img class="img-responsive img-full" src="img/quiche_lorraine_01.jpg" alt="" />
 												</div>
 												<div class="item">
-														<img class="img-responsive img-full" src="img/slide-2.jpg" alt="" />
-												</div>
-												<div class="item">
-														<img class="img-responsive img-full" src="img/slide-3.jpg" alt="" />
+														<img class="img-responsive img-full" src="img/quiche_lorraine_02.jpg" alt="" />
 												</div>
 										</div>
 
 										<!-- Controls -->
-										<a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+										<a class="left carousel-control" href="#carousel-recipe-header" data-slide="prev">
 												<span class="icon-prev"></span>
 										</a>
-										<a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+										<a class="right carousel-control" href="#carousel-recipe-header" data-slide="next">
 												<span class="icon-next"></span>
 										</a>
 								</div>
@@ -81,3 +77,5 @@
 
 </div>
 <!-- /.container -->
+
+<script src="js/theme/random_recipe.js"></script>
