--- a/src/main/webapp/sass/random_recipe.scss
+++ b/src/main/webapp/sass/random_recipe.scss
@@ -8,3 +8,15 @@
     text-align: center;
   }
 }
+
+#carousel-recipe-header {
+  .item {
+    overflow: hidden;
+    height: 300px;
+    max-height: 300px;
+
+    img {
+      margin-top: -10%;
+    }
+  }
+}
