--- a/src/main/webapp/sass/inc/business-casual.scss
+++ b/src/main/webapp/sass/inc/business-casual.scss
@@ -6,7 +6,7 @@
 
 body {
     font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
-    background: url('http://orig01.deviantart.net/f5b7/f/2013/008/9/6/free_vector_of_the_day__241__background_texture_by_cristina012-d5qts3i.jpg') center center fixed;
+    background: url('../img/brushed.png') center center fixed;
     //-webkit-background-size: cover;
     //-moz-background-size: cover;
     //background-size: cover;
@@ -125,7 +125,7 @@ footer {
         font-size: 5em;
         font-weight: 700;
         line-height: normal;
-        color: #fff;
+        color: #0070ff;
     }
 
     .top-divider {
@@ -147,7 +147,7 @@ footer {
         font-size: 1.25em;
         font-weight: 400;
         letter-spacing: 3px;
-        color: #fff;
+        color: #0070ff;
     }
 
     .navbar {
