--- a/src/main/webapp/partials/random_recipe.html
+++ b/src/main/webapp/partials/random_recipe.html
@@ -29,13 +29,13 @@
 												<span class="icon-next"></span>
 										</a>
 								</div>
-								<h2 class="brand-name">{{randomRecipeCtrl.title}}</h1>
+								<h2 class="brand-name">{{randomRecipeCtrl.recipe.title}}</h1>
 								<hr class="tagline-divider" />
 								<aside class="recipe-info">
 									<ul>
-										<li>Pour 4 Personnes</li>
-										<li>Préparation : 20 minutes</li>
-										<li>Cuisson : 20 minutes</li>
+										<li>Pour {{randomRecipeCtrl.recipe.nbPeople}} Personnes</li>
+										<li>Préparation : {{randomRecipeCtrl.recipe.prepTime}} minutes</li>
+										<li>Cuisson : {{randomRecipeCtrl.recipe.cookTime}} minutes</li>
 									</ul>
 									<aside>
 						</div>
@@ -47,15 +47,12 @@
 				<div class="box">
 						<div class="col-lg-12">
 								<hr>
-								<h2 class="intro-text text-center">Build a website
-										<strong>worth visiting</strong>
-								</h2>
+								<h2 class="intro-text text-center">Ingrédients</h2>
 								<hr>
-								<img class="img-responsive img-border img-left" src="img/intro-pic.jpg" alt="">
 								<hr class="visible-xs">
-								<p>The boxes used in this template are nested inbetween a normal Bootstrap row and the start of your column layout. The boxes will be full-width boxes, so if you want to make them smaller then you will need to customize.</p>
-								<p>A huge thanks to <a href="http://join.deathtothestockphoto.com/" target="_blank">Death to the Stock Photo</a> for allowing us to use the beautiful photos that make this template really come to life. When using this template, make sure your photos are decent. Also make sure that the file size on your photos is kept to a minumum to keep load times to a minimum.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+								<ul>
+									<li data-ng-repeat="i in randomRecipeCtrl.recipe.ingredients">{{i}}</li>
+								</ul>
 						</div>
 				</div>
 		</div>
@@ -65,12 +62,9 @@
 				<div class="box">
 						<div class="col-lg-12">
 								<hr>
-								<h2 class="intro-text text-center">Beautiful boxes
-										<strong>to showcase your content</strong>
-								</h2>
+								<h2 class="intro-text text-center">Préparation</h2>
 								<hr>
-								<p>Use as many boxes as you like, and put anything you want in them! They are great for just about anything, the sky's the limit!</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+								<p data-ng-repeat="s in randomRecipeCtrl.recipe.steps">{{s}}</p>
 						</div>
 				</div>
 		</div>
