--- a/src/main/webapp/partials/add_recipe.html
+++ b/src/main/webapp/partials/add_recipe.html
@@ -1,48 +1,75 @@
 <div class="container" data-ng-controller="AddRecipeCtrl as addRecipeCtrl">
 
-
-		<!-- Instructions -->
+	<form id="add-recipe">
 		<div class="row">
 				<div class="box">
 						<div class="col-lg-12">
 								<hr>
 								<h2 class="intro-text text-center">Add a Recipe</h2>
 								<hr>
-								<form id="add-recipe" class="form-horizontal">
                   <div class="form-group">
-										<label for="recipe-title" class="control-label col-sm-offset-2 col-sm-2">Recipe title</label>
-										<div class="col-sm-6">
-											<input type="text" id="recipe-title" name="recipe-title" class="form-control" data-ng-model="addRecipeCtrl.recipe.title" />
-										</div>
+										<label for="recipe-title" class="control-label">Recipe title</label>
+										<input type="text" id="recipe-title" name="recipe-title" class="form-control" data-ng-model="addRecipeCtrl.recipe.title" />
 									</div>
-									<div class="form-group">
-										<label for="recipe-nb-people" class="control-label col-sm-offset-2 col-sm-2">Number of people</label>
-										<div class="col-sm-6">
+									<div class="row">
+										<div class="form-group col-sm-4">
+											<label for="recipe-nb-people" class="control-label">Number of people</label>
 											<input type="number" id="recipe-nb-people" name="recipe-nb-people" class="form-control" data-ng-model="addRecipeCtrl.recipe.nbPeople" />
 										</div>
-									</div>
-									<div class="form-group">
-										<label for="recipe-prep-time" class="control-label col-sm-offset-2 col-sm-2">Preparation time</label>
-										<div class="col-sm-6">
+										<div class="form-group col-sm-4">
+											<label for="recipe-prep-time" class="control-label">Preparation time</label>
 											<input type="number" id="recipe-prep-time" name="recipe-prep-time" class="form-control" data-ng-model="addRecipeCtrl.recipe.prepTime" />
 										</div>
-									</div>
-									<div class="form-group">
-										<label for="recipe-prep-time" class="control-label col-sm-offset-2 col-sm-2">Cooking time</label>
-										<div class="col-sm-6">
+										<div class="form-group col-sm-4">
+											<label for="recipe-prep-time" class="control-label">Cooking time</label>
 											<input type="number" id="recipe-nb-people" name="recipe-nb-people" class="form-control" data-ng-model="addRecipeCtrl.recipe.cookTime" />
 										</div>
 									</div>
-									<div class="form-group">
-									    <div class="col-sm-offset-4 col-sm-6">
-									      <button type="submit" class="btn btn-primary" data-ng-click="addRecipeCtrl.addRecipe()" data-ng-disabled="addRecipeCtrl.working">Submit</button>
-									    </div>
-									  </div>
-                </form>
 						</div>
 				</div>
 		</div>
 
+		<div class="row">
+				<div class="box">
+						<div class="col-lg-12">
+								<hr>
+								<h2 class="intro-text text-center">Ingredients</h2>
+								<hr>
+                <ul>
+									<li ng-repeat="i in addRecipeCtrl.recipe.ingredients track by $index"><input type="text" ng-model="addRecipeCtrl.recipe.ingredients[$index]" /> <a href="" data-ng-click="addRecipeCtrl.removeIngredient($index)">X</a></li>
+									<li><a href="" data-ng-click="addRecipeCtrl.addIngredient()">Add an ingredient</a></li>
+								</ul>
+						</div>
+				</div>
+		</div>
+
+		<div class="row">
+				<div class="box">
+						<div class="col-lg-12">
+								<hr>
+								<h2 class="intro-text text-center">Steps</h2>
+								<hr>
+                <ol>
+									<li ng-repeat="i in addRecipeCtrl.recipe.steps track by $index"><input type="text" ng-model="addRecipeCtrl.recipe.steps[$index]" /> <a href="" data-ng-click="addRecipeCtrl.removeStep($index)">X</a></li>
+									<li><a href="" data-ng-click="addRecipeCtrl.addStep()">Add a step</a></li>
+								</ol>
+						</div>
+				</div>
+		</div>
+
+		<div class="row">
+				<div class="box">
+						<div class="col-lg-12">
+							<div class="form-group">
+								<button type="submit" class="col-sm-offset-4 col-sm-4" data-ng-click="addRecipeCtrl.addRecipe()"><hr>
+									<h2 class="intro-text text-center">Submit the recipe</h2>
+								<hr> </button>
+							</div>
+						</div>
+				</div>
+		</div>
+
+		</form>
 </div>
 <!-- /.container -->
 
