Adapted webapp to the new format of recipes exposed by the api

--- a/src/main/webapp/partials/random_recipe.html
+++ b/src/main/webapp/partials/random_recipe.html
@@ -33,7 +33,13 @@
 								<hr class="tagline-divider" />
 								<aside class="recipe-info">
 									<ul>
-										<li>Pour {{randomRecipeCtrl.recipe.nbPeople}} Personnes</li>
+										<li>
+											<ng-pluralize count="randomRecipeCtrl.recipe.nbPeople"
+											when="{
+												'1': 'Pour une personne',
+												'other': 'Pour {} personnes'
+											}"></ng-pluralize>
+										</li>
 										<li>Préparation : {{randomRecipeCtrl.recipe.prepTime}} minutes</li>
 										<li>Cuisson : {{randomRecipeCtrl.recipe.cookTime}} minutes</li>
 									</ul>
