Added an embedded mongodb database to dev profile

--- a/src/main/webapp/partials/random_recipe.html
+++ b/src/main/webapp/partials/random_recipe.html
@@ -57,7 +57,7 @@
 								<hr>
 								<hr class="visible-xs">
 								<ul>
-									<li data-ng-repeat="i in randomRecipeCtrl.recipe.ingredients">{{i}}</li>
+									<li data-ng-repeat="i in randomRecipeCtrl.recipe.ingredients">{{i.product}} : {{i.quantity}} {{i.unit}}</li>
 								</ul>
 						</div>
 				</div>
